--- a/SignalPatterns/data/style.css
+++ b/SignalPatterns/data/style.css
@@ -227,6 +227,7 @@ textarea {
 
 .calculated-duration {
   margin-top: 16px;
+  margin-left:8px;
   padding: 12px;
   background-color: #f0f0f0;
   box-shadow: inset 0 2px 4px rgba(0,0,0,0.1);
