--- a/SignalPatterns/data/style.css
+++ b/SignalPatterns/data/style.css
@@ -621,6 +621,23 @@ button.error:hover {
   flex-grow: 1;
 }
 
+.bmc-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  margin-top: 16px;
+}
+
+.tw-page-link a {
+    background: linear-gradient(90deg, #50B6FF 0%, #E38D4C 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    font-size: 24px;
+    text-fill-color: transparent;
+}
+
 @media (max-width: 600px) {
   .button-group {
     flex-direction: column;
