--- a/SignalPatterns/data/style.css
+++ b/SignalPatterns/data/style.css
@@ -1,3 +1,20 @@
+:root {
+  --primary: #454;
+  --primary-variant: #526652;
+  --secondary: #056;
+  --background: #ffffff;
+  --surface: #f5f5f5;
+  --error: #500;
+  --on-primary: #ffffff;
+  --on-secondary: #fff;
+  --on-background: #000000;
+  --on-surface: #000000;
+  --on-error: #ffffff;
+  --text-high-emphasis: rgba(0, 0, 0, 0.87);
+  --text-medium-emphasis: rgba(0, 0, 0, 0.6);
+  --text-disabled: rgba(0, 0, 0, 0.38);
+  --divider: rgba(0, 0, 0, 0.12);
+}
 .segment-block {
   cursor: pointer;
 }
@@ -37,23 +54,6 @@
 }
 .morse-table tr:nth-child(even) {
   background: #fafafa;
-}
-:root {
-  --primary: #454;
-  --primary-variant: #454b1b;
-  --secondary: #056;
-  --background: #ffffff;
-  --surface: #f5f5f5;
-  --error: #500;
-  --on-primary: #ffffff;
-  --on-secondary: #fff;
-  --on-background: #000000;
-  --on-surface: #000000;
-  --on-error: #ffffff;
-  --text-high-emphasis: rgba(0, 0, 0, 0.87);
-  --text-medium-emphasis: rgba(0, 0, 0, 0.6);
-  --text-disabled: rgba(0, 0, 0, 0.38);
-  --divider: rgba(0, 0, 0, 0.12);
 }
 
 body {
