--- a/SignalPatterns/data/style.css
+++ b/SignalPatterns/data/style.css
@@ -479,6 +479,7 @@ button {
   border: none;
   border-radius: 4px;
   padding: 10px 16px;
+  margin: 1px;
   font-size: 14px;
   cursor: pointer;
   transition: background-color 0.3s;
